# Choose-your-own-adventure

./: README.md
backend/: database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  models.py  story_generator.py  test.py
backend/db/: database.py
backend/models/: schema.md  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: index.html  vite.config.js
frontend/src/: util.js
